# LicenseManager

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.en.md  README.md
cmake/: LicenseManagerConfig.cmake.in
src/: Base64.h  CMakeLists.txt  Crypto.cpp  Crypto.h  DeviceFingerprint.cpp  DeviceFingerprint.h  LicenseManager.cpp  LicenseManager.h
